--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Proxy server for Jira API requests",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,8 +15,9 @@
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "form-data": "^4.0.4",
-    "multer": "^2.0.2"
+    "multer": "^1.4.5",
+    "node-fetch": "^3.3.2"
   }
 }
