--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "form-data": "^4.0.4",
-    "multer": "^1.4.5",
+    "multer": "1.4.5-lts.1",
     "node-fetch": "^3.3.2"
   }
 }
