--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "Proxy server for Jira API requests",
   "main": "server.js",
-  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "form-data": "^4.0.4",
-    "multer": "1.4.5-lts.1",
-    "node-fetch": "^3.3.2"
+    "form-data": "^4.0.0",
+    "multer": "1.4.5-lts.1"
   }
 }
